Added About Page

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Customise your New Tab like it is your Table."
+      content="TableTop - Own your New Tab. A macOS Dock inspired New Tab override."
     />
     <!--
       manifest.json provides metadata used when your web app is installed on a
