Updated NewWidget to match v1.x format.

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="TableTop - Own your New Tab. A macOS Dock inspired New Tab override."
+      content="TableTop - Own your New Tab. A New Tab override inspired by the macOS Dashboard."
     />
     <!--
       manifest.json provides metadata used when your web app is installed on a
